--- a/Htt_ChIPSeq_Files/05_WT_Q111_QQ_data_analysis/README
+++ b/Htt_ChIPSeq_Files/05_WT_Q111_QQ_data_analysis/README
@@ -1,1 +1,1 @@
-Analytical results after combining ChIP-Seq datasets from 2017 (WT and Q111het) and 2020 (WT and QQ)
+Analytical results after analyzing ChIP-Seq datasets from 2017 (WT and Q111het) and 2020 (WT and QQ) separately for 57k peak regions followed by meta analysis
