--- a/Htt_ChIPSeq_Files/09_B2020_WT_QQ_data_analysis/README
+++ b/Htt_ChIPSeq_Files/09_B2020_WT_QQ_data_analysis/README
@@ -1,3 +1,4 @@
 Analytical results after analyzing ChIP-Seq datasets 2020 (WT and QQ)
 1. Downstreamed to 30M reads
 2. Broad Peak calling
+3. Merged Peaks (peaks found in any 2 samples)
